switch from hard coded posts to using bloglist, change config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,6 +13,11 @@ collections:
       fields:
           - { name: date, label: Date, widget: date }
           - { name: title, label: Title }
+          - label: 'Categories'
+            name: 'categories'
+            widget: 'select'
+            required: true
+            options: ['conseils', 'news']
           - { name: featuredImage, label: featuredImage, widget: image }
           - { name: description, label: Description }
           - { name: body, label: Body, widget: markdown }
